# cli-demo

./: .gitignore  README.md  pyproject.toml  record-demo.sh
assets/branding/: logo.txt
demo_engine/: __init__.py  __main__.py  audio.py  capture.py  cli.py  config.py  effects.py  export.py  fonts.py  presets.py  renderer.py  scenes.py  terminal_parser.py  themes.py  timeline.py
scenes/: default_glitch.yaml  incident_recovery.yaml  launch_day.yaml  migration_story.yaml
scripts/: build-demo-assets.py  glyph-audit.py  render-demo.py
tests/: test_export_pipeline.py  test_glyph_coverage.py  test_preset_timing.py  test_terminal_parser.py  test_theme_schema.py
themes/: glitch.json  matrix.json  minimal.json  nightowl.json  ops.json  synthwave.json
